# strot

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  fly.toml  main.py  pyproject.toml  run-shopify-review-finder.py  setup_test_env.sh  test_job_logging.py  tox.ini
.github/: changelog_config.json
.github/workflows/: main.yml  release.yml
analysis_scripts/: POPUP.md  README.md  REPORT_GENERATION.md  analyze_execution_flow.py  analyze_llm_responses.py  analyze_popup_logs.py  analyze_session_basic.sh  check_popup_dismissal.sh  compare_sessions.py  comprehensive_analysis.py  generate_html_report.py  generate_session_csv.py  generate_single_session_html.py  run_all_analysis.sh
api/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
api/migration/: env.py
api/migration/versions/: 5a32cb8c111a_jobs_and_labels.py
api/strot_api/: main.py  settings.py
api/strot_api/database/: __init__.py
api/strot_api/database/schema/: __init__.py  job.py  label.py
api/strot_api/routes/: jobs.py  labels.py
ayejax/: __init__.py  constants.py  debug_session.py  helpers.py  inject.js  job_logging.py  llm.py  logging.py  main.py  page_worker.py  pagination.py  request.py  tag.py  types.py
ayejax/_interface/: api.py  cli.py
ayejax/_interface/api/: auth.py  main.py  settings.py
ayejax/_interface/api/database/: __init__.py
ayejax/_interface/api/routes/: apis.py  jobs.py
ayejax/adapter/: __init__.py  utils.py
ayejax/codegen/: __init__.py  base.py
ayejax/codegen/bash/: __init__.py  curl.py
ayejax/codegen/python/: __init__.py  requests.py
ayejax/codegen/python/templates/: httpx.jinja  requests.jinja
ayejax/finder/: shopify_review.py
ayejax/finder/natural_language/: __init__.py
ayejax/har/: __init__.py  builder.py
ayejax/logging/: __init__.py
ayejax/logging/handlers/: __init__.py  file.py  s3.py
ayejax/pagination/: __init__.py  pattern.py  pattern_builder.py  strategy.py
ayejax/popup/: __init__.py  dismisser.py  strategies.py  verification.py
ayejax/report_generation/: __init__.py
ayejax/report_generation/templates/: analysis_event.html  analysis_report.html  code_generation_event.html  determine_strategy_event.html  event.html  generic_event.html  report.html  run_step_event.html  simple_report.html
ayejax/request/: __init__.py  har.py
ayejax/storage/: __init__.py  factory.py  interface.py  s3.py
ayejax/storage/state/: __init__.py  factory.py  interface.py  memory.py
ayejax/tag/: __init__.py
ayejax/tag/schema/: reviews.py
dashboard/: README.md  package-lock.json  package.json
dashboard/prisma/: schema.prisma
dashboard/src/: middleware.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: AnalysisStep.tsx  CodeGeneration.tsx  JobCard.tsx  JobDetail.tsx  JobList.tsx  LLMCall.tsx  PaginationDetection.tsx  ReportViewer.tsx  SlideNavigation.tsx
dashboard/src/lib/: config.ts  db.ts  env.ts  report-generator.ts  s3.ts
dashboard/src/types/: index.ts
docs/: RELEASING.md
docs/work/: 2025-07-14-001-feature-supabase-logging-export-system.md  2025-07-14-002-task-s3-state-storage-design.md  2025-08-21-001-research-strot-package-architecture.md  2025-08-21-002-research-analyzer-flow-technical.md  2025-08-21-003-research-api-architecture.md  2025-08-21-004-research-evaluation-framework.md  2025-08-21-005-research-ui-architecture.md  2025-08-21-006-feature-html-preprocessing-and-context-reduction.md  2025-08-21-007-feature-smart-content-skip.md  2025-08-26-001-feature-separate-task-evaluation-system.md  2025-08-27-001-feature-unified-parameter-detection.md
eval/: README.md  __init__.py  __main__.py  client.py  evaluator.py  inputs.py  log_parser.py  screenshot_workflow.py  settings.py  types.py  workflow_tester.py
eval/airtable/: __init__.py  client.py  schema.py
eval/review/: analyzer.py  finder.py  results.jsonl  urls
mcp_server/: __main__.py  exceptions.py  settings.py
migration/: env.py
migration/versions/: 1412fd0835fe_remove_analysis_metadata_column_from_.py  6ec2fa2fbe0e_create_outputs_jobs_and_execution_.py  c112a5111506_remove_execution_states_table.py  cbd3ff897db6_create_jobs_outputs_and_session_table.py
strot/: __init__.py  browser.py  exceptions.py  llm.py
strot/analyzer/: __init__.py  analyzer.py  utils.py
strot/analyzer/_meta/plugin/: __init__.py  inject.js
strot/analyzer/_meta/prompts/: __init__.py  schema.py
strot/analyzer/prompts/: __init__.py  schema.py
strot/analyzer/prompts/templates/: identify_pagination_keys.jinja  parameter_detection.jinja
strot/analyzer/schema/: __init__.py  pagination_strategy.py  request.py  source.py
strot/browser/: __init__.py  inject.js  plugin.py  tab.py
strot/code_executor/: __init__.py  base.py  e2b.py
strot/code_executor/unsafe/: __init__.py  code_meta.py  executor.py
strot/logging/: __init__.py
strot/logging/handlers/: __init__.py  s3.py
strot/pagination_translators/: __init__.py  base.py  limit_offset.py
strot/schema/: base.py  pattern.py  point.py  source.py
strot/schema/request/: __init__.py  detail.py  pagination_info.py  request.py
strot/schema/response/: __init__.py  detail.py  preprocessor.py  response.py
strot/type_adapter/: __init__.py  utils.py
strot/utils/: image.py  request.py  text.py
tests/: conftest.py  test_analyzer.py  test_llm.py  test_pagination_translators.py  test_utils_image.py  test_utils_text.py
ui/: Dockerfile  README.md  package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
ui/src/components/common/: CodeBlock.tsx
ui/src/components/forms/: CreateJobForm.tsx
ui/src/components/layout/: ContentHeader.tsx  MainLayout.tsx  Sidebar.tsx
ui/src/components/logs/: AnalysisStep.tsx  CodeGeneration.tsx  LLMCall.tsx  LogViewer.tsx  PaginationDetection.tsx  ParameterDetection.tsx  SlideNavigation.tsx  StructuredExtraction.tsx
ui/src/lib/: api-client.ts  config.ts  env.ts  report-generator.ts  s3.ts
ui/src/types/: index.ts
(+22 files in other folders)
