[project]
name = "strot"
dynamic = ["version"]
description = "Discover API endpoints with natural language"
authors = [{ name = "Harsh Verma", email = "harsh@vertexcover.io" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.50.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.39.4",
    "docstring-parser>=0.17.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "json-repair>=0.44.1",
    "jsonref>=1.1.0",
    "openai>=1.76.0",
    "patchright>=1.52.5",
    "pillow>=11.2.1",
    "pydantic>=2.11.3",
    "python-magic>=0.4.27",
    "rapidfuzz>=3.13.0",
    "regex>=2024.11.6",
    "rnet>=2.4.2",
    "structlog>=25.4.0",
]

[project.urls]
Repository = "https://github.com/vertexcover-io/strot"

[project.scripts]
stroteval = "eval.__main__:app"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.20.0",
    "mypy>=0.991",
    "ruff>=0.6.9",
]

[dependency-groups]
eval = [
    "cyclopts>=3.22.3",
    "json-schema-to-pydantic>=0.4.1",
    "pyairtable>=3.0.0",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["strot"]

[tool.hatch.build.targets.wheel.sources]
"strot" = "strot"

[tool.hatch.build]
include = [
  "strot/**/*.py",
  "strot/**/*.js",
  "strot/**/*.jinja"
]

[tool.mypy]
files = ["strot", "api", "eval"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "TRY002",
    "TRY003",
    "TRY400",
    "A002",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
